objects/LegacyDataComparison__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Assigned__c</fullName>
        <description>Assigned CRM resource responsible for validating script accuracy</description>
        <inlineHelpText>Assigned CRM resource responsible for validating script accuracy</inlineHelpText>
        <label>CRM Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vishal</fullName>
                </value>
                <value>
                    <fullName>Rishi</fullName>
                </value>
                <value>
                    <fullName>Hemant</fullName>
                </value>
                <value>
                    <fullName>Lovejeet</fullName>
                </value>
                <value>
                    <fullName>Dishank</fullName>
                </value>
                <value>
                    <fullName>Namit</fullName>
                </value>
                <value>
                    <fullName>Sanjana</fullName>
                </value>
                <value>
                    <fullName>Aparna</fullName>
                </value>
                <value>
                    <fullName>Vaibhav</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actualValue__c</fullName>
        <label>Actual Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>comparisonType__c</fullName>
        <label>Comparison Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contractCurrentYear__c</fullName>
        <formula>legacyContract__r.Current_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contractFinalYear__c</fullName>
        <formula>VALUE(legacyContract__r.Parent_Contract_Term_Years__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Final Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>expectedValue__c</fullName>
        <label>Expected Value</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legacyContractReport__c</fullName>
        <label>Contract Report</label>
        <referenceTo>LegacyContractReport__c</referenceTo>
        <relationshipLabel>Legacy Data Comparisons</relationshipLabel>
        <relationshipName>legacyDataComparisons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>legacyContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>LegacyDataComparison</relationshipLabel>
        <relationshipName>LegacyDataComparison</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>parameterName__c</fullName>
        <label>Parameter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parameterValue__c</fullName>
        <label>Parameter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productName__c</fullName>
        <formula>subscription__r.SBQQ__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quoteIsVariableOptions__c</fullName>
        <formula>quote__r.Multiple_Years_Commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote is Variable Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quoteLineField__c</fullName>
        <label>Quote Line Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Legacy Data Comparisons</relationshipLabel>
        <relationshipName>Legacy_Data_Comparisons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>LegacyDataComparison (quote)</relationshipLabel>
        <relationshipName>legacyDataComparisons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>renewalQuoteValue__c</fullName>
        <label>renewalQuoteValue</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>renewalQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>renewalQuote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>LegacyDataComparison</relationshipLabel>
        <relationshipName>legacyDataComparisons1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>Script Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
                <value>
                    <fullName>NEEDS VALIDATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>reviewerNotes__c</fullName>
        <label>Reviewer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>reviewerResult__c</fullName>
        <label>Reviewer Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CORRECT</fullName>
                </value>
                <value>
                    <fullName>INCORRECT</fullName>
                </value>
                <value>
                    <fullName>UNSURE</fullName>
                </value>
                <value>
                    <fullName>TRUE_FAILURE</fullName>
                </value>
                <value>
                    <fullName>TRUE_SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FALSE_FAILURE</fullName>
                </value>
                <value>
                    <fullName>FALSE_SUCCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>subscriptionPricingMethod__c</fullName>
        <formula>TEXT(subscription__r.SBQQ__Product__r.SBQQ__PricingMethod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Pricing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>LegacyDataComparison</relationshipLabel>
        <relationshipName>LegacyDataComparison</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <label>Year</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Legacy Data Comparison</label>
    <nameField>
        <displayFormat>CMPR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Data Comparisons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>comparisonType__c</columns>
        <columns>parameterName__c</columns>
        <columns>parameterValue__c</columns>
        <columns>reviewerNotes__c</columns>
        <columns>reviewerResult__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>